@@ -1154,18 +1154,19 @@ SEXP attribute_hidden do_pipe(SEXP call, SEXP op, SEXP args, SEXP env)
 
 typedef struct gzfileconn {
     void *fp;
-    int cp;
+    int compress;
 } *Rgzfileconn;
 
 static Rboolean gzfile_open(Rconnection con)
 {
     gzFile fp;
-    char mode[6], *p;
+    char mode[6];
+    Rgzfileconn gzcon = con->private;
 
     strcpy(mode, con->mode);
-    /* Must open as binary */
-    if((p = strchr(mode, 't'))) *p = 'b';
-
+    /* Must open as binary, only "r" and "w" are supported */
+    if(strchr(con->mode, 'w')) sprintf(mode, "wb%1d", gzcon->compress);
+    else strcpy(mode, "rb");
     fp = gzopen(R_ExpandFileName(con->description), mode);
     if(!fp) {
 	warning(_("cannot open compressed file '%s', probable reason '%s'"),
@@ -1176,8 +1177,7 @@ static Rboolean gzfile_open(Rconnection con)
     con->isopen = TRUE;
     con->canwrite = (con->mode[0] == 'w' || con->mode[0] == 'a');
     con->canread = !con->canwrite;
-    if(strlen(con->mode) >= 2 && con->mode[1] == 'b') con->text = FALSE;
-    else con->text = TRUE;
+    con->text = strchr(con->mode, 'b') ? FALSE : TRUE;
     set_iconv(con);
     con->save = -1000;
     return TRUE;
@@ -1268,12 +1268,7 @@ static Rconnection newgzfile(const char *description, const char *mode,
 	free(new->class); free(new);
 	error(_("allocation of gzfile connection failed"));
     }
-    init_con(new, description, CE_NATIVE, "");
-    strncpy(new->mode, mode, 1);
-    if(strlen(mode) > 1 && mode[1] == 't')
-	sprintf(new->mode+1, "t%1d", compress);
-    else
-	sprintf(new->mode+1, "b%1d", compress);
+    init_con(new, description, CE_NATIVE, mode);
 
     new->canseek = TRUE;
     new->open = &gzfile_open;
@@ -1290,6 +1285,7 @@ static Rconnection newgzfile(const char *description, const char *mode,
 	free(new->description); free(new->class); free(new);
 	error(_("allocation of gzfile connection failed"));
     }
+    ((Rgzfileconn)new->private)->compress = compress;
     return new;
 }
 
@@ -1341,8 +1337,7 @@ static Rboolean bzfile_open(Rconnection con)
     bz->fp = fp;
     bz->bfp = bfp;
     con->isopen = TRUE;
-    if(strlen(con->mode) >= 2 && con->mode[1] == 't') con->text = TRUE;
-    else con->text = FALSE;
+    con->text = strchr(con->mode, 'b') ? FALSE : TRUE;
     set_iconv(con);
     con->save = -1000;
     return TRUE;
@@ -1495,8 +1490,7 @@ static Rboolean xzfile_open(Rconnection con)
 	}
     }
     con->isopen = TRUE;
-    if(strlen(con->mode) >= 2 && con->mode[1] == 't') con->text = TRUE;
-    else con->text = FALSE;
+    con->text = strchr(con->mode, 'b') ? FALSE : TRUE;
     set_iconv(con);
     con->save = -1000;
     return TRUE;
@@ -1712,13 +1706,13 @@ SEXP attribute_hidden do_gzfile(SEXP call, SEXP op, SEXP args, SEXP env)
     }
     switch(type) {
     case 0:
-	con = newgzfile(file, strlen(open) ? open : "r", compress);
+	con = newgzfile(file, strlen(open) ? open : "rb", compress);
 	break;
     case 1:
-	con = newbzfile(file, strlen(open) ? open : "r", compress);
+	con = newbzfile(file, strlen(open) ? open : "rb", compress);
 	break;
     case 2:
-	con = newxzfile(file, strlen(open) ? open : "r", subtype, compress);
+	con = newxzfile(file, strlen(open) ? open : "rb", subtype, compress);
 	break;
     }
     ncon = NextConnection();
@@ -4624,13 +4618,13 @@ SEXP attribute_hidden do_url(SEXP call, SEXP op, SEXP args, SEXP env)
 			con = newfile(url, ienc, strlen(open) ? open : "r");
 			break;
 		    case 0:
-			con = newgzfile(url, strlen(open) ? open : "r", compress);
+			con = newgzfile(url, strlen(open) ? open : "rt", compress);
 			break;
 		    case 1:
-			con = newbzfile(url, strlen(open) ? open : "r", compress);
+			con = newbzfile(url, strlen(open) ? open : "rt", compress);
 			break;
 		    case 2:
-			con = newxzfile(url, strlen(open) ? open : "r", subtype, compress);
+			con = newxzfile(url, strlen(open) ? open : "rt", subtype, compress);
 			break;
 		    }
 		} else
@@ -5367,7 +5361,7 @@ do_memCompress(SEXP call, SEXP op, SEXP args, SEXP env)
 	ret = lzma_stream_encoder(&strm, filters, LZMA_CHECK_CRC32);
 	if (ret != LZMA_OK) error("internal error %d in memCompress", ret);
 
-	outlen = 1.01 * inlen + 600; /* FIXME */
+	outlen = 1.01 * inlen + 600; /* FIXME, copied from bzip2 */
 	buf = (unsigned char *) R_alloc(outlen, sizeof(unsigned char));
 	strm.next_in = RAW(from);
 	strm.avail_in = inlen;
